--- a/samples/GeolocatorSample/GeolocatorSample/GeolocatorSample.csproj
+++ b/samples/GeolocatorSample/GeolocatorSample/GeolocatorSample.csproj
@@ -3,15 +3,20 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
-	  <PackageReference Include="Plugin.Permissions" Version="4.0.2-beta" />
-	  <PackageReference Include="Xam.Plugin.Geolocator" Version="4.5.3-beta" />
-	  <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
+	  <PackageReference Include="Plugin.Permissions" Version="6.0.1" />
+	  <PackageReference Include="Xamarin.Forms" Version="5.0.0.2244" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\src\Geolocator.Plugin\Geolocator.Plugin.csproj">
+	    <ReferenceOutputAssembly></ReferenceOutputAssembly>
+	  </ProjectReference>
 	</ItemGroup>
 	<ItemGroup>
 	  <None Update="HomePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </None>
 	</ItemGroup>
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadXFormsNugetUpgradeInfoBarGeolocatorSampleHideInfoBar="True" /></VisualStudio></ProjectExtensions>
 
 
 
